# StalmarckSAT

./: CMakeLists.txt  README.md  configure  makefile.in
.github/workflows/: build.yml  python-package.yml
StalmarckPy/: CMakeLists.txt  build.sh  pyproject.toml  setup.py  stalmarckpy_bindings.cpp
src/cli/: main.cpp
src/core/: formula.cpp  formula.hpp  formula_impl.hpp  stalmarck.cpp  stalmarck.hpp
src/parser/: parser.cpp  parser.hpp
src/solver/: solver.cpp  solver.hpp
test/: CMakeLists.txt
test/fuzzing/: solver_fuzzer.cpp
test/integration/: test_integration.cpp  test_stalmarck.cpp
test/integration/test_cases/: sat_easy_1.cnf  sat_easy_2.cnf  sat_easy_3.cnf  sat_easy_4.cnf  sat_easy_5.cnf  sat_large_12.cnf  sat_large_15.cnf  sat_med_10.cnf  sat_med_6.cnf  sat_med_8.cnf  sat_small_3.cnf  sat_small_4.cnf  unsat_easy_1.cnf  unsat_easy_2.cnf  unsat_large_15.cnf  unsat_large_25.cnf  unsat_med_12.cnf
test/ksat/: ksat_generator.py
test/php/: php_generator.py
test/unit/: test_formula.cpp  test_parser.cpp  test_solver.cpp
