[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "stalmarckpy"
version = "0.1.0"
description = "Python bindings for StalmarckSAT solver"
authors = [
    {name = "StalmarckSAT Team", email = "ljdavis27@amherst.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pybind11>=2.6.0"]

[tool.setuptools]
package-dir = {"stalmarckpy" = "stalmarckpy"}
packages = ["stalmarckpy"]